# code_snippets

./: .dockerignore  .example.env  .gitguardian.yaml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 22834c2775fc_add_users_and_relationships.py  761249ebf49c_add_language_model.py  840d90c9ea14_init_schema.py  ed9aea07ac17_populate_languages.py
app/: auth.py  config.py  constants.py  db.py  main.py  mq.py  redis.py  reindex.py
app/enums/: language.py  snippet.py
app/errors/: __init__.py  auth.py
app/handlers/: __init__.py  language.py  snippet.py  tag.py
app/repos/: __init__.py  language.py  snippet.py  tag.py  user.py
app/schemas/: __init__.py  code_runner.py  language.py  snippet.py  tag.py  user.py
app/services/: code_runner.py  search.py
app/validators/: password.py
app/views/: __init__.py  auth.py  code_runner.py  language.py  snippet.py  tag.py
app/workers/: code_runner.py  init_images.py  snippet.py
frontend/: .dockerignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  types.ts
frontend/src/components/: AuthCallback.tsx  CodeEditor.tsx  CodeRunner.tsx  GoogleRegister.tsx  Header.tsx  Home.tsx  LanguageSelect.tsx  LanguageSwitcher.tsx  Login.tsx  (+10 more)
tests/: conftest.py
tests/api/: test_auth.py  test_google_auth.py  test_languages.py  test_snippets.py  test_tags.py
tests/unit/: test_auth_logic.py  test_code_runner.py  test_enums.py  test_handlers.py  test_reindex.py  test_repos.py  test_services.py  test_validators.py  test_workers.py
(+4 files in other folders)
