[tool.poetry]
name = "code-snippets"
version = "0.1.0"
description = ""
authors = ["expiratory <expiratory@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.2"
sqlalchemy = "^2.0.44"
uvicorn = "^0.38.0"
python-dotenv = "^1.2.1"
psycopg2-binary = "^2.9.11"


[tool.poetry.group.dev.dependencies]
alembic = "^1.17.1"


[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
